--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint"
+      "pre-commit": " npm run lint"
     }
   },
   "keywords": [],
